# simple_html_server

./: .flake8  .gitignore  README.md  index.html  pyproject.toml  simple_server.py  start-server.ps1
