[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-html-server"
version = "1.0.0"
description = "Ein einfacher HTTP-Server in Python zum Servieren von HTML-Dateien"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["http", "server", "html", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.scripts]
simple-server = "simple_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/simple_html_server"
Repository = "https://github.com/yourusername/simple_html_server"
Issues = "https://github.com/yourusername/simple_html_server/issues"

[tool.setuptools]
py-modules = ["simple_server"]
